--- a/application/index.html
+++ b/application/index.html
@@ -59,7 +59,7 @@
                      when an unknown printer took a galley of type and 
                      scrambled it to make a type specimen book. 
                     </p>
-                  <img src="image/users.jpg" width=80px>
+                  <img src="/image/users.jpg" width=80px>
                 </div> 
               </div>
               <div class="column col-60" id="text-part1">
@@ -82,7 +82,7 @@
                 <div class='img-wrap'>
                   <h3>Users</h3>
                   <p>We provide test of your tradmark, and tell you the similarty. </p>
-                  <img src="image/users.jpg" width=80px>
+                  <img src="/image/users.jpg" width=80px>
                 </div> 
               </div>
               <div class="column col-60" id="text-part1">
