--- a/redirect.html
+++ b/redirect.html
@@ -2,5 +2,5 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://github.com/RongYangAriel/Trademark/blob/master/application/index.html">
+    <meta http-equiv="refresh" content="0; url=https://rongyangariel.github.io/Trademark/application/index.html">
   </head>
