--- a/application/index.html
+++ b/application/index.html
@@ -95,7 +95,7 @@
               <div class="column col-40" id= "user">
                 <div class='img-wrap'>
                   <h4>Users</h4>
-                  <p>We provide test of your tradmark, and tell you the similarty. </p>
+                  <p>We provide test of your tradmark, and tell you the similarty. 
                   Lorem Ipsum is simply dummy text of 
                     the printing and typesetting industry. 
                     Lorem Ipsum has been the industry's standard 
@@ -112,8 +112,7 @@
                       Lorem Ipsum has been the industry's standard 
                       dummy text ever since the 1500s,
                        when an unknown printer took a galley of type and 
-                       scrambled it to make a type specimen book.when an unknown printer took a galley of type and 
-                       scrambled it to make a type specimen book.
+                        </p>
                   <img src="../image/users.jpg" width=80px>
                 </div> 
               </div>
