--- a/application/index.html
+++ b/application/index.html
@@ -137,22 +137,24 @@
                   <form id="service-form">
                     <label for="company">Please tell us more about your company</label>
                       <br><br>
-                      <textarea type="text" id="fcompany" name="fcompany"  placeholder="Please describe your company or business in clear and brief words...."></textarea>
+                      <textarea type="text" id="fcompany" name="company"  placeholder="Please describe your company or business in clear and brief words...."></textarea>
                       <br><br>
-                    <button type="button" value="Classfiy" class="btn" id="service-submit" onclick="postText()">Classfiy</button>
-                </form>
-                <div class='example'>
-                  <h4>Example input and output</h4>
-                  <img src='../image/goodsandservices.png' style='height: 35%; width: 50%;'>
-                </div>
+                    <button type="button" value="Classfiy" class="btn" id="service-submit" >Classfiy</button>
+                  </form>
                 </div>
               </div>
 
               <div class="column col-60">
                 <div class="output-container">
                   <h4>Here is the result.</h4>
-                  <label>NICE Classification:</label>
-                    <div id = "output-1-1"></div>
+                  <label class = "tooltip">NICE Classification: ?
+                    <span class = 'tooltiptext' id= 'output-1-3'>Class 43 includes mainly services provided by persons or 
+                      establishments whose aim is to prepare food 
+                      and drink for consumption and services provided to 
+                      obtain bed and board in hotels, boarding houses or 
+                      other establishments providing temporary accommodation.</span>
+                  </label>
+                    <div id = "output-1-1"></div>    
                   <label>Class Similtary Score:</label>
                     <div id = "output-1-2"></div>
                 </div>
@@ -170,12 +172,11 @@
                 <div class="input-container">
                   <p>Upload your compnay trademark logo and we will check if it may be confused for another trademark.</p>
                   <form id="image-form">
-                    <input type="file" class="btn" id="img-upload" multiple="false" name="filename" accept="image/*">
-                    <button type="button" class="btn" id="img-submit" onclick="showImg()">Upload</button>
+                    <input type="file" class="btn" id="img-upload" multiple="false" name="filename" accept="image/*" onchange="output2(event)">
+                    <button type="button" class="btn" id="img-submit" >Upload</button>
                   </form>
                   <div class="example">
-                    <h4>Example:</h4>
-                    <img src = '../image/similar_images.png' style='height: 60%; width: 90%;'>
+                    <img id='blah' src = '#' style='height: 60%; width: 90%;'>
                   </div>
                 </div>
               </div>
@@ -207,13 +208,10 @@
                     <label for="company-name-1">Company Name 1:</label>
                       <input type="text" id="company-name-1" name="company-name-1">
                     <label for="company-name-2">Company Name 2:</label>
-                      <input type="text" id="company-name-1" name="company-name-1">
-                    <button type="button" class="btn" id="name-submit" onclick="getText()">Compare</button>
+                      <input type="text" id="company-name-2" name="company-name-2">
+                    <button type="button" class="btn" id="name-submit" onclick="output3()">Compare</button>
                   </form>
-                  <div class='example'>
-                    <h4>Example:</h4>
-                    <img src='../image/namecomparison.png' style='height: 35%; width: 50%;'>
-                  </div>
+                  
                 </div>
               </div>
 
@@ -221,10 +219,10 @@
                 <div class="output-container">
                   <h4>Here is the result.</h4>
                   <label >Related Words:</label>
-                    <div id = "output-4-1"></div>
+                    <div id = "output-3-1"></div>
 
                     <label>Similtary Score:</label>
-                    <div id = "output-4-2"></div>
+                    <div id = "output-3-2"></div>
 
                   </div>
               </div>
