--- a/application/index.html
+++ b/application/index.html
@@ -399,7 +399,6 @@
                       <option value="5">5</option>
                     </select>
                     <br>
-
                     <button type="button" value="Classfiy" class="btn" id="service-submit" >Classfiy</button>
                   </form>
                 </div>
@@ -407,17 +406,9 @@
 
               <div class="column col-60">
                 <div class="output-container">
-                  <h4>Here is the result.</h4>
-                  <label class = "tooltip">NICE Classification: ?
-                    <span class = 'tooltiptext' id= 'output-1-3'>Class 43 includes mainly services provided by persons or 
-                      establishments whose aim is to prepare food 
-                      and drink for consumption and services provided to 
-                      obtain bed and board in hotels, boarding houses or 
-                      other establishments providing temporary accommodation.</span>
-                  </label>
-                    <div id = "output-1-1"></div>    
-                  <label>Class Similtary Score:</label>
-                    <div id = "output-1-2"></div>
+                  <h4>Confustion prediction</h4>
+                  <label for="perdiction">Result</label>
+                    <div name="perdiction" id = "output-5-1"></div>
                 </div>
               </div>
             </div>
