--- a/application/index.html
+++ b/application/index.html
@@ -13,7 +13,8 @@
     <main>
         <!-- ***********************  Navigation Bar  *********************** -->
         <header>
-          <div class="navigation-bar">
+          
+          <div class="navigation-bar" id='nav'>
             <nav>
               <ul>
                 <li><a  class="btn" id = "part-1-btn" href="#part-1">ABOUT 1</a></li>
@@ -147,7 +148,7 @@
 
               <div class="column col-60">
                 <div class="output-container">
-                  <h4>Here is the result.</h4>
+                  <h4>Here is the result:</h4>
                   <label class = "tooltip">NICE Classification: ?
                     <span class = 'tooltiptext' id= 'output-1-3'>Class 43 includes mainly services provided by persons or 
                       establishments whose aim is to prepare food 
@@ -155,16 +156,16 @@
                       obtain bed and board in hotels, boarding houses or 
                       other establishments providing temporary accommodation.</span>
                   </label>
-                    <div id = "output-1-1"></div>    
+                      <div id = "output-1-1"></div>    
                   <label>Class Similtary Score:</label>
-                    <div id = "output-1-2"></div>
+                      <div id = "output-1-2"></div>
                 </div>
               </div>
             </div>
           </div>
         </section>
 
-        <!-----------------------Image Upload------------------------->
+        <!-----------------------Image Upload Service 2------------------------->
         <section id="service-2">
           <div class="content-wrap">
             <h2>Show us your company logo</h2>
@@ -173,23 +174,29 @@
                 <div class="input-container">
                   <p>Upload your compnay trademark logo and we will check if it may be confused for another trademark.</p>
                   <form id="image-form">
-                    <input type="file" class="btn" id="img-upload" multiple="false" name="filename" accept="image/*" onchange="output2(event)">
-                    <button type="button" class="btn" id="submit-2" >Upload</button>
+                    <input type="file" class="btn" id="select-2" multiple="false" name="filename" accept="image/*">
+                    <button type="button" class="btn" id="submit-2" >Submit</button>
                   </form>
                   <div class="example">
-                    <img id='blah' src = '#' style='height: 60%; width: 90%;'>
+                    <img id='input-img-2' style='height: 60%; width: 90%; padding:5%;'>
                   </div>
                 </div>
               </div>
 
               <div class="column col-60">
-                <div class="output-container">
-                  <h4>Similar Images</h4>
-                  <P>There is a risk of confusion!</P>
-                  <P>Below are the similar trademarks and similarity scores:</P>
-                    <div id = "output-2-1"></div>
-                    <img src="../image/adidas-edited.png" id="img-output" style="width: 100px;">
-                </div>
+                <h4>Similar Images</h4>
+                  <P>There is a risk of confusion! Below are the similar trademarks and similarity scores:</P>
+                    <div class="output-container">
+                      <figure>
+                          <img id='img-2-1'/>
+                          <figcaption id='caption-2-1'></figcaption>
+                      </figure>
+
+                      <figure>
+                          <img id='img-2-2'/>
+                          <figcaption id='caption-2-2'></figcaption>
+                      </figure>
+                  </div>
               </div>
             </div>
             
@@ -197,7 +204,7 @@
         </section>
 
 
-        <!--------------------- Name ------------------>
+        <!--------------------- Name  Service 3------------------>
         <section id='service-3'>
           <div class='content-wrap'>
             <h2>Tell Us Two Company Names</h2>
@@ -216,13 +223,13 @@
               </div>
 
               <div class="column">
-                <div class="output-container">
-                  <h4>Here is the result.</h4>
-                  <label >Related Words:</label>
-                    <div id = "output-3-1"></div>
+                <h4>Here is the result.</h4>
+                  <div class="output-container"></div>
+                    <label >Related Words:</label>
+                      <div id = "output-3-1"></div>
 
                     <label>Similtary Score:</label>
-                    <div id = "output-3-2"></div>
+                      <div id = "output-3-2"></div>
 
                   </div>
               </div>
@@ -239,25 +246,23 @@
                 <div class="input-container">
                   <p>Upload your compnay trademark logo and we will check if it may be confused for another trademark.</p>
                   <form id="image-form">
-                    <input type="file" class="btn" id="img-upload" multiple="false" name="filename" accept="image/*">
-                    <button type="button" class="btn" id="submit-4" onclick="showImg()">Upload</button>
+                    <input type="file" class="btn" id="select-4" multiple="false" name="filename" accept="image/*" >
+                    <button type="button" class="btn" id="submit-4">Submit</button>
                   </form>
                 </div>
                 <div class="example">
-                  <h4>Example: input and output</h4>
-                  <img src='../image/adidas.png' style="width: 30%; height: 30%;">
-                  <img src="../image/adidas-edited.png" style="width: 30%; height: 30%;">
+                  <img id='input-img-4'  style='height: 60%; width: 90%; padding:5%;'>
                 </div>
               </div>
 
               <div class="column col-60">
-                <div class="output-container">
-                  <h4>Similar Images</h4>
-                  <P>There is a risk of confusion! similarity Score:</P>
-                    <div id = "output-2-1"></div>
-                  <P>Below are the similar trademarks.</P>
-                    <div id = "output-img"></div>
-                    <img id="img-output" style="width: 100px;">
+                <h4>Extract Logo</h4>
+                  <P>Here is the logo extracted:</P>
+                  <div class="output-container">
+                    <figure>
+                        <img id='img-4'/>
+                        <figcaption id='caption-4'></figcaption>
+                    </figure>
                 </div>
               </div>
             </div>
@@ -366,7 +371,7 @@
                       <option value="5">5</option>
                     </select>
                     <br>
-                    <button type="button" value="Classfiy" class="btn" id="submit-5" >Classfiy</button>
+                    <button type="button" value="Classfiy" class="btn" id="submit-5" >Submit</button>
                   </form>
                 </div>
               </div>
@@ -375,7 +380,7 @@
                 <div class="output-container">
                   <h4>Confustion prediction</h4>
                   <label for="perdiction">Result</label>
-                    <div name="perdiction" id = "output-5-1"></div>
+                    <div name="perdiction" id = "output-5"></div>
                 </div>
               </div>
             </div>
